fixed recipes layout, fixed homepage layout
no more black boxes in the homepage jumbotron area. font size in recipes
page fits jumbotron and no more overlapping of black boxes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,12 +74,17 @@
   bottom: 100000px;
 }
 
-.jumbotron .row {
+.jumbotron .row .title {
   margin-height: auto;
   margin-width: auto;
   border-style: solid;
   border-color: black;
 }
+
+.jumbotron .row .title a {
+  font-size: 20px;
+}
+
 .ingredient-pill {
   border-radius: 24px;
   margin: -0.5em 0.5em 1.5em 0.5em
